[tool.poetry]
name = "poxic"
version = "0.1.0"
description = ""
authors = ["newbee1905 <beenewminh@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
transformers = "^4.30.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
